# lexidb

./: .gitignore  CMakeLists.txt  README.md  config.h.in  lexi.conf
.github/workflows/: cmake-single-platform.yml
bench/: CMakeLists.txt  rand_keys.h  vmap_bench.cc
cmds/: auth.json  del.json  deque.json  enque.json  get.json  help.json  info.json  keys.json  pop.json  push.json  select.json  set.json  zdel.json  zhas.json  zset.json
scripts/: generate_commands_help  make_random  run
src/: auth.c  auth.h  builder.c  builder.h  clap.c  clap.h  cli-cmd.c  cli-cmd.h  cli-util.c  cli-util.h  cli.c  cluster.c  cluster.h  cmd.c  cmd.h  config.c  config.h  config_parser.c  config_parser.h  configure.c  connection.c  db.c  db.h  de.c  de.h  ev.c  ev.h  ev_epoll.c  ev_select.c  hilexi.c  hilexi.h  hilexi_parser.c  hilexi_parser.h  ht.c  ht.h  lexer.c  lexer.h  lexi-cli.c  lexi_atomic.h  lexicli.c  (+54 more)
tests/: CMakeLists.txt  builder_test.c  cmd_test.c  config_parser_test.c  config_test.c  debug.cc  debug.h  ht_test.c  lexer_test.c  parser_test.c  test_helpers.h  test_ht_resize.c  test_lexer.c  test_parser.c  trie_test.c  vec_iter_test.c  vec_test.c  vjson_test.c  vmap_test.c  vmap_test.cc
